<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_pedidos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/fondo3"
    tools:context="abel.project.twa.habana500.AboutActivity">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            android:alpha="0.9"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:src="@mipmap/ic_about"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/titleAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:textSize="10pt"
                    android:textColor="@color/md_brown_500"
                    android:fontFamily="serif-monospace"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


                <com.codesgood.views.JustifiedTextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:id="@+id/copyright"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingRight="10dp"
                    android:paddingEnd="10dp"
                    android:gravity="left|center_horizontal"
                    android:text="@string/texto_onei" />


                <LinearLayout
                    android:id="@+id/linearTeam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/ic_autor"
                                android:id="@+id/imageView" />

                            <TextView
                                android:id="@+id/textView15"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/co_autor"
                                android:textColor="@color/colorAccent"
                                android:paddingLeft="5dp"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textSize="14sp"
                                android:textStyle="bold"
                                android:gravity="left|center"/>

                        </LinearLayout>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left"
                            android:textSize="14sp"
                            android:paddingLeft="50dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:text="@string/autor2"
                            android:id="@+id/textView6" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="50dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/linearEmail">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:gravity="left"
                            android:textColor="@color/md_brown_500"
                            android:text="@string/co_mail"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:id="@+id/textView7" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:paddingLeft="5dp"
                            android:textSize="14sp"
                            android:text="@string/abel_email"
                            android:id="@+id/textView8" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearItemReporte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp">

                    <ImageView
                        android:id="@+id/itemiconReporte"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_bug" />

                    <TableLayout
                        android:id="@+id/tablaReport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:gravity="center">

                        <TableRow
                            android:id="@+id/mifilaReport"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tituloReport"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:gravity="left"
                                android:text="@string/bugs"
                                android:textStyle="bold"
                                android:textSize="7pt"
                                android:textColor="@color/md_brown_500"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/subtituloReporte"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:gravity="left"
                                android:text="@string/bugs_description"
                                android:textStyle="italic" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearItemSugerencia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp">

                    <ImageView
                        android:id="@+id/itemiconSugerencia"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_suggestion" />

                    <TableLayout
                        android:id="@+id/tablaSugerencia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:gravity="center">

                        <TableRow
                            android:id="@+id/mifilaSugerencia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tituloSugerencia"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:gravity="left"
                                android:text="@string/sugerencia"
                                android:textStyle="bold"
                                android:textSize="7pt"
                                android:textColor="@color/md_brown_500"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/subtituloSugerencia"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:gravity="left"
                                android:text="@string/sugerencia_description"
                                android:textStyle="italic" />
                        </TableRow>
                    </TableLayout>

                </LinearLayout>




            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>




